build/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: incident-center
  namespace: production
spec:
  selector:
    matchLabels:
      app: incident-center
  template:
    metadata:
      labels:
        app: incident-center
    spec:
      containers:
        - name: incident-center
          image: 887044485231.dkr.ecr.eu-west-1.amazonaws.com/incident-center:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7777
          resources:
            requests:
              memory: '512Mi'
              cpu: '1'
            limits:
              memory: '2000Mi'
              cpu: '2'
