build/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guardian-dashboard-service
  namespace: production
  labels:
    app: guardian-dashboard
spec:
  selector:
    app: guardian-dashboard
  type: ClusterIP
  ports:
    - name: node
      port: 80
      targetPort: 8080
