build/production/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
    nginx.ingress.kubernetes.io/backend-protocol: 'http'
    nginx.ingress.kubernetes.io/enable-cors: 'false'
  name: guardian-dashboard-ingress
  namespace: production
  labels:
    app: guardian-dashboard
spec:
  rules:
    - host: guardian.rfcx.org
      http:
        paths:
          - backend:
              serviceName: guardian-dashboard-service
              servicePort: 80
